--- a/Document/【Amaris】/Expert_pages/business_expert.css
+++ b/Document/【Amaris】/Expert_pages/business_expert.css
@@ -5,7 +5,8 @@
 }
 
 .expert-item {
-	border-bottom: 1px solid #4682B4; min-height: 100px;
+	border-bottom: 1px solid #4682B4; 
+	min-height: 100px;
     background-color: #F5F5F5;   
     position: relative;
     cursor: pointer;
